# intermed

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  repomix-output.md
crates/intermed-cli/: Cargo.toml  build.rs
crates/intermed-cli/src/: command.rs  lib.rs  main.rs  persistence.rs  verbosity.rs
crates/intermed-cli/tests/: duckdb_e2e.rs  e2e.rs  mod_scale_bench.rs
crates/intermed-cli/tests/golden/: doctor_explain_resource.txt  doctor_explain_security.txt  mixin_map_overlap.txt  vfs_explain_safe_merge.txt
crates/intermed-columnar/: Cargo.toml
crates/intermed-columnar/src/: arrow_rows.rs  ascent_backend.rs  backend.rs  convert.rs  cost.rs  datafusion_backend.rs  datalog.rs  engine.rs  error.rs  executor.rs  explain.rs  external.rs  fast_row.rs  ffi.rs  frontend.rs  incremental.rs  ir.rs  lib.rs  optimizer.rs  physical.rs  polars_backend.rs  regression.rs  router.rs  schema.rs  sql.rs  strategy.rs  value.rs  wasm.rs
crates/intermed-columnar/tests/: engine_breakdown.rs  join_bench.rs  optimizer_bench.rs  pipeline.rs  regression_dump.rs  strategy_bench.rs
crates/intermed-config/: Cargo.toml
crates/intermed-config/src/: lib.rs  sections.rs
crates/intermed-deps/: Cargo.toml
crates/intermed-deps/src/: effective.rs  explain.rs  graph.rs  impact.rs  implicit.rs  lib.rs  ordering.rs  pairwise.rs  provider.rs  ranges.rs  report.rs  resolver.rs  rule.rs  semver.rs
crates/intermed-deps/tests/: dependency_dedup.rs  dependency_rule.rs  neoforge_dependency.rs  provided_version.rs  pubgrub_resolver.rs
crates/intermed-doctor-core/: Cargo.toml
crates/intermed-doctor-core/src/: bounded_zip.rs  collector.rs  engine.rs  instance_layout.rs  io_util.rs  jar_meta.rs  layer.rs  lib.rs  modpack.rs  modpack_manifest.rs  profile.rs  report.rs  rule.rs  scan_filter.rs  settings.rs  suppression.rs  target.rs
crates/intermed-doctor-core/src/jar_cache/: config.rs  fingerprint.rs  mod.rs  prune.rs  remote.rs  util.rs
crates/intermed-duckdb/: Cargo.toml
crates/intermed-duckdb/src/: analytics.rs  ir_engine.rs  lib.rs  rules.rs  schema.rs  sql.rs  store.rs
crates/intermed-duckdb/tests/: codegen_ir_equivalence.rs  duckdb_backend.rs  sql_codegen_exec.rs  to_sql_divergence.rs
crates/intermed-dynamics/: Cargo.toml
crates/intermed-dynamics/src/: lib.rs  script_scan.rs
crates/intermed-evidence/: Cargo.toml
crates/intermed-evidence/src/: lib.rs
crates/intermed-facts/: Cargo.toml  schema.toml
crates/intermed-facts/src/: lib.rs  schema.rs  schema_contract.rs
crates/intermed-facts/tests/: proptest_invariants.rs  schema_gate.rs
crates/intermed-lab/: Cargo.toml
crates/intermed-lab/src/: attribution.rs  classify.rs  corpus.rs  eval.rs  execution.rs  lib.rs  report.rs  run.rs
crates/intermed-lab/tests/: lab_flow.rs
crates/intermed-log/: Cargo.toml
crates/intermed-log/src/: lib.rs  stacktrace.rs
crates/intermed-minecraft-scan/: Cargo.toml
crates/intermed-minecraft-scan/src/: access.rs  entrypoint_analysis.rs  env.rs  forge_annotation.rs  identity.rs  knowledge.rs  lib.rs  metadata.rs
crates/intermed-minecraft-scan/tests/: metadata.rs
crates/intermed-mixin-intel/: Cargo.toml
crates/intermed-mixin-intel/src/: activation.rs  analyzer.rs  annotation.rs  apply_failure.rs  bloat.rs  bytecode.rs  class_parser.rs  classpath.rs  clusters.rs  collect.rs  complexity.rs  composition.rs  dataflow.rs  effect.rs  fixtures.rs  graph.rs  handler_effect.rs  hierarchy.rs  hot_path.rs  injection_point.rs  lib.rs  locals.rs  metrics.rs  model.rs  naming.rs  perf_match.rs  profile.rs  recommendation.rs  refmap.rs  resource_bridge.rs  rule.rs  runtime_log.rs  scan.rs  selector.rs  semantics.rs  severity.rs  signature.rs  site.rs  subsystem.rs  target_res.rs  (+1 more)
crates/intermed-mixin-intel/tests/: collect_emit.rs  effect_pipeline.rs  mixin_scan.rs  rule_eval.rs
crates/intermed-packops/: Cargo.toml
crates/intermed-packops/src/: lib.rs
crates/intermed-packops/tests/: overlay.rs
crates/intermed-query-bridge/: Cargo.toml
crates/intermed-query-bridge/src/: lib.rs
crates/intermed-query-bridge/tests/: datalog_souffle.rs  real_pack_shadow.rs  strategy_parity.rs
crates/intermed-report/: Cargo.toml
crates/intermed-report/src/: demo.rs  grouping.rs  html.rs  lib.rs  sarif.rs  terminal.rs
crates/intermed-resource-ast/: Cargo.toml
crates/intermed-resource-ast/src/: collector.rs  lib.rs  model.rs  rule.rs  scan.rs
crates/intermed-resource-ast/tests/: golden.rs  properties.proptest-regressions  properties.rs
crates/intermed-resource-identity/: Cargo.toml
crates/intermed-resource-identity/src/: alias.rs  domain.rs  key.rs  lib.rs  namespace.rs  resolve.rs  writer.rs
crates/intermed-rules/: Cargo.toml
crates/intermed-rules/src/: columnar.rs  convert.rs  datalog_codegen.rs  declarative.rs  distribution.rs  expr.rs  generate.rs  imperative.rs  interpreter.rs  ir_lowering.rs  join_plan.rs  lib.rs  merge.rs  model.rs  pack.rs  signing.rs  souffle.rs  sql_codegen.rs  template.rs  trace.rs  tsv.rs  validate.rs
crates/intermed-rules/tests/: backend_parity.rs  engine_speed.rs  metadata_predicates.rs  rule_pack_proptest.rs  schema_gate.rs  tsv_escape.rs
crates/intermed-runtime-preflight/: Cargo.toml
crates/intermed-runtime-preflight/src/: lib.rs
crates/intermed-sbom/: Cargo.toml
crates/intermed-sbom/src/: export.rs  lib.rs
crates/intermed-sbom/tests/: correlation_rule.rs  sbom_scan.rs
crates/intermed-security-audit/: Cargo.toml
crates/intermed-security-audit/src/: collapse.rs  cp.rs  detect.rs  fixtures.rs  lib.rs
crates/intermed-security-audit/tests/: collapse_proptest.rs  security_rule.rs  security_scan.rs
crates/intermed-spark-bridge/: Cargo.toml
crates/intermed-spark-bridge/src/: config.rs  lib.rs
crates/intermed-spark-bridge/tests/: spark_import.rs
crates/intermed-vfs/: Cargo.toml
crates/intermed-vfs/src/: lib.rs
crates/intermed-vfs/tests/: vfs_scan.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: class_parser.rs  deps_semver.rs  log_stacktrace.rs  resource_ast.rs  resource_json.rs  runtime_log.rs  tiny_mappings.rs
(+102 files in other folders)
