[workspace]
resolver = "2"
members = [
    # ── Phase 0/1: working core ───────────────────────────────────────────
    "crates/intermed-facts",
    "crates/intermed-evidence",
    "crates/intermed-report",
    "crates/intermed-doctor-core",
    "crates/intermed-config",
    "crates/intermed-minecraft-scan",
    "crates/intermed-log",
    "crates/intermed-deps",
    "crates/intermed-rules",
    "crates/intermed-cli",
    # ── Later phases: structured stubs (real Collector/Rule contracts) ─────
    "crates/intermed-resource-identity",# Canonical resource identity (Layer E + M)
    "crates/intermed-vfs",              # Layer E  — Phase 3
    "crates/intermed-resource-ast",     # Layer M  — resource/data semantics (AST)
    "crates/intermed-packops",          # Layer E  — Phase 3
    "crates/intermed-dynamics",         # Layer E  — script-engine dynamics sensors
    "crates/intermed-mixin-intel",      # Layer F  — Phase 4
    "crates/intermed-security-audit",   # Layer G  — Phase 6
    "crates/intermed-sbom",             # Layer H  — Phase 6
    "crates/intermed-spark-bridge",     # Layer I  — Phase 7
    "crates/intermed-lab",              # Layer K  — Phase 8
    "crates/intermed-duckdb",           # Layer J  — DuckDB SQL backend (feature-gated)
    "crates/intermed-columnar",         # In-process columnar (Arrow) query engine — the default rule backend
    "crates/intermed-query-bridge",     # Test-time equivalence guard: RuleSpec → IR lowering + engine/interpreter parity
]

[workspace.package]
version = "0.1.0-alpha"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/intermed/intermed"
authors = ["InterMed authors"]

[workspace.dependencies]
# Foundation
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
thiserror = "1"
anyhow = "1"

# Scanning / parsing (Tier 1 — pure, no JVM)
cafebabe = "0.9.0"
noak = "0.6.3"
zip = { version = "2", default-features = false, features = ["deflate"] }
toml = "0.8"
serde_yaml = "0.9"
regex = "1"
semver = "1"
pubgrub = "0.3"
creeper-semver-pubgrub = "0.2"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
base64 = "0.22"

# Parallelism (data-parallel jar/file scanning)
rayon = "1"

# Property-based testing (dev / #[cfg(test)] only)
proptest = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Internal crates
intermed-facts = { path = "crates/intermed-facts" }
intermed-evidence = { path = "crates/intermed-evidence" }
intermed-columnar = { path = "crates/intermed-columnar" }
intermed-query-bridge = { path = "crates/intermed-query-bridge" }
intermed-report = { path = "crates/intermed-report" }
intermed-doctor-core = { path = "crates/intermed-doctor-core" }
intermed-config = { path = "crates/intermed-config" }
intermed-minecraft-scan = { path = "crates/intermed-minecraft-scan" }
intermed-log = { path = "crates/intermed-log" }
intermed-deps = { path = "crates/intermed-deps" }
intermed-rules = { path = "crates/intermed-rules" }
intermed-resource-identity = { path = "crates/intermed-resource-identity" }
intermed-vfs = { path = "crates/intermed-vfs" }
intermed-resource-ast = { path = "crates/intermed-resource-ast" }
intermed-packops = { path = "crates/intermed-packops" }
intermed-dynamics = { path = "crates/intermed-dynamics" }
intermed-mixin-intel = { path = "crates/intermed-mixin-intel" }
intermed-security-audit = { path = "crates/intermed-security-audit" }
intermed-sbom = { path = "crates/intermed-sbom" }
intermed-spark-bridge = { path = "crates/intermed-spark-bridge" }
intermed-lab = { path = "crates/intermed-lab" }
intermed-duckdb = { path = "crates/intermed-duckdb" }

[profile.release]
lto = "thin"
strip = true
