[package]
name = "intermed-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "The `intermed` command-line workbench. Composition root: wires collectors and rules into the diagnosis engine."

[lib]
name = "intermed_cli"
path = "src/lib.rs"

[[bin]]
name = "intermed"
path = "src/main.rs"

[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"

[dependencies]
clap.workspace = true
rayon.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow = "1"
intermed-config.workspace = true
intermed-doctor-core.workspace = true
intermed-report.workspace = true
intermed-minecraft-scan.workspace = true
intermed-log.workspace = true
intermed-deps.workspace = true
intermed-rules.workspace = true
intermed-vfs.workspace = true
intermed-resource-ast.workspace = true
intermed-packops.workspace = true
intermed-dynamics.workspace = true
intermed-mixin-intel.workspace = true
intermed-security-audit.workspace = true
intermed-sbom.workspace = true
intermed-spark-bridge.workspace = true
intermed-lab.workspace = true
intermed-duckdb.workspace = true
strsim = "0.11"
dhat = { version = "0.3", optional = true }
# Default global allocator: the diagnosis builds a large graph of many small,
# short-lived allocations; glibc malloc fragments badly on it (live heap ≈ 0.8 GB
# but RSS ≈ 3–5 GB on big packs). mimalloc keeps RSS close to the live set and
# returns freed pages to the OS. Disabled automatically under `dhat-heap`.
mimalloc = { version = "0.1", default-features = false }

[features]
default = []
duckdb = ["intermed-duckdb/duckdb"]
# Heap profiling: build with `--features dhat-heap`, run once, inspect dhat-heap.json.
dhat-heap = ["dep:dhat"]

[dev-dependencies]
zip.workspace = true
intermed-security-audit = { path = "../intermed-security-audit" }

[[test]]
name = "duckdb_e2e"
required-features = ["duckdb"]
