[package]
name = "intermed-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "InterMed configuration: TOML files, INTERMED_* env vars, and CLI override bridge."

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
intermed-doctor-core.workspace = true

[dev-dependencies]
serde_json.workspace = true