[package]
name = "intermed-evidence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Findings, severities and the evidence graph linking facts to conclusions."

[dependencies]
serde.workspace = true
intermed-facts.workspace = true
