[package]
name = "intermed-lab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layer K — Compatibility Lab: reproducible corpus locks, smoke-test ingestion/classification, and compatibility matrices (Phase 8)."

[dependencies]
intermed-doctor-core.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
regex.workspace = true
rayon.workspace = true
thiserror.workspace = true
