[package]
name = "intermed-minecraft-scan"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layer A (environment detection) and Layer B (mod/plugin metadata) collectors. Pure Rust: zip + JSON/TOML/YAML, no JVM."

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
serde_yaml.workspace = true
zip.workspace = true
intermed-doctor-core.workspace = true
