[package]
name = "intermed-mixin-intel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layer F — mixin intelligence / preflight risk map."

[dependencies]
intermed-doctor-core.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
zip.workspace = true

[dev-dependencies]
zip.workspace = true
