[package]
name = "intermed-mixin-intel"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layer F — mixin intelligence / preflight risk map."

[dependencies]
cafebabe = "0.9.0"
intermed-doctor-core.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
zip.workspace = true

[dev-dependencies]
zip.workspace = true
