[package]
name = "intermed-packops"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Phase 3 — transactional pack operations (overlay preview)."

[dependencies]
intermed-doctor-core.workspace = true
intermed-vfs.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
zip.workspace = true
