[package]
name = "intermed-report"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Renderers for DoctorReport: terminal (ANSI), JSON, and SARIF 2.1.0."

[dependencies]
serde.workspace = true
serde_json.workspace = true
intermed-facts.workspace = true
intermed-evidence.workspace = true
intermed-doctor-core.workspace = true
