[package]
name = "intermed-rules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layer J (Phase 1, imperative) — cross-cutting rules over metadata facts. Datalog backend lands in Phase 5 behind the same Rule trait."

[dependencies]
intermed-doctor-core.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
