[package]
name = "intermed-rules"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layer J (Phase 1, imperative) — cross-cutting rules over metadata facts. Datalog backend lands in Phase 5 behind the same Rule trait."

[dependencies]
intermed-doctor-core.workspace = true
intermed-evidence.workspace = true
intermed-log.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
sha2.workspace = true
ureq = { version = "2", default-features = false, features = ["tls"] }

[dev-dependencies]
proptest.workspace = true
