[package]
name = "intermed-runtime-preflight"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layer L — runtime preflight (contract/backend/profile) — structured stub; contract wired, implementation deferred."

[dependencies]
intermed-doctor-core.workspace = true
