[package]
name = "intermed-spark-bridge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Layer I — spark / performance evidence bridge (Phase 7)."

[dependencies]
intermed-doctor-core.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true